Fixed execution scripts.