@@ -17,6 +17,7 @@ java -Dorg.jboss.logging.provider=slf4j\
      --module-path "${EVOALPATH}/modules/:$PLUGIN_PATHS" \
      --add-modules ALL-MODULE-PATH \
      --add-opens java.base/java.lang=guice \
+     --add-exports io.jenetics.base/io.jenetics.internal.math=de.evoal.core \
      --add-exports io.jenetics.base/io.jenetics.internal.collection=de.evoal.core \
      --add-exports io.jenetics.base/io.jenetics.internal.util=de.evoal.core \
      -m de.evoal.core/de.evoal.core.main.Evoal \
